Correction mineur dans camembert et fasttext, ajout d'un script de reordonnancement

--- a/camembert.ipynb
+++ b/camembert.ipynb
@@ -223,7 +223,7 @@
    ],
    "source": [
     "cv = sklearn.model_selection.ShuffleSplit(n_splits=10, test_size=0.3, random_state=0)\n",
-    "clf = svm.SVC(kernel='poly', C=1, random_state=42)\n",
+    "clf = svm.SVC(kernel='rbf', C=1, random_state=42)\n",
     "results = cross_val_score(clf, X, y, cv=cv, scoring=\"f1\")\n",
     "print(\"F-score de la validation croisée : \", results)\n",
     "print(\"Moyenne des F-score\", np.mean(results))"
